--- a/portfolio/digital-agency/css/style.css
+++ b/portfolio/digital-agency/css/style.css
@@ -130,12 +130,12 @@ section{padding: 7.5rem 0;}
 .white-blue-btn:hover{color: #ffffff; ;background-color:#02aeb3 !important; border: 1px solid transparent;}
 
 .white-tran-yellow-btn{font-size: 12px;font-family: 'Roboto', sans-serif;padding: 10px 30px;color:#ffffff !important;font-weight: 600;background-color:transparent;border:1px solid #ffffff !important;border-radius: 0px;-webkit-transition: .8s ease !important;-o-transition: .8s ease !important;transition: .8s ease !important; cursor: pointer}
-.white-tran-yellow-btn:hover{color: #202020 !important; ;background-color:#e8d716 !important; border: 1px solid transparent !important;}
+.white-tran-yellow-btn:hover{color: #202020 !important; ;background-color:#13bf3c !important; border: 1px solid transparent !important;}
 
 .blue-and-black-btn{font-size: 12px;font-family: 'Roboto', sans-serif;padding: 7px 35px;;color:#ffffff;;font-weight: 600;background-color:#5bbdbb;border:1px solid transparent;border-radius: 0px;-webkit-transition: .8s ease !important;-o-transition: .8s ease !important;transition: .8s ease !important; cursor: pointer}
 .blue-and-black-btn:hover{color: #ffffff !important; ;background-color:#202020 !important; border: 1px solid transparent;}
 
-.yellow-and-black-btn{font-size: 12px;font-family: 'Roboto', sans-serif;padding: 7px 35px;;color:#ffffff;;font-weight: 600;background-color:#e8d716;border:1px solid transparent;border-radius: 0px;-webkit-transition: .8s ease !important;-o-transition: .8s ease !important;transition: .8s ease !important; cursor: pointer}
+.yellow-and-black-btn{font-size: 12px;font-family: 'Roboto', sans-serif;padding: 7px 35px;;color:#ffffff;;font-weight: 600;background-color:#13bf3c;border:1px solid transparent;border-radius: 0px;-webkit-transition: .8s ease !important;-o-transition: .8s ease !important;transition: .8s ease !important; cursor: pointer}
 .yellow-and-black-btn:hover{color: #ffffff !important; ;background-color:#202020 !important; border: 1px solid transparent;}
 
 
@@ -777,7 +777,7 @@ header{
     right: 0;
     top: 0;
     bottom: 0;
-    background-color:#dbd527;
+    background-color:#13bf3c;
 }
 
 .banner-text-right{
@@ -828,7 +828,7 @@ header{
    Services
 ====================================== */
 .about-sec{
-    background-color:#e8d716;
+    background-color:#13bf3c;
     position: relative;
     overflow: visible;
     margin-top: 120px;
@@ -950,7 +950,7 @@ header{
     padding-top: 60px;
 }
 .skill-sec .skill-bars .progress-item .progress-bar{
-    background-color: #dbd527 !important;
+    background-color: #13bf3c !important;
     position: relative;
 
 }
@@ -1058,13 +1058,13 @@ header{
 }
 
 .team-section .image-holder:hover ~.team-name{
-    color:#e8d716;
+    color:#13bf3c;
 }
 
 .team-section .image-holder img{
     height: 250px;
     width: 250px;
-    background-color: #e8d716;
+    background-color: #13bf3c;
     border-radius: 50%;
     margin-left: auto;
     margin-right: auto;
@@ -1179,9 +1179,9 @@ header{
 }
 
 .portfolio-sec .cbp-l-filters-button .cbp-filter-item.cbp-filter-item-active {
-    color: #e8d716;
+    color: #13bf3c;
     background: transparent;
-    border-bottom: solid 3px #e8d716;
+    border-bottom: solid 3px #13bf3c;
 
 }
 .portfolio-sec .cbp-l-filters-button .cbp-filter-item,
@@ -1194,12 +1194,12 @@ header{
     margin-top: -190px;
 }
 .portfolio-sec .cbp-l-grid-mosaic .cbp-caption-activeWrap {
-    background: rgba(232, 215, 22, 0.8);
+    background: #13bf3c;
 }
 
 .portfolio-sec .cbp-l-filters-button .cbp-filter-item:hover {
     color: #202020;
-    border-color:#e8d716;
+    border-color:#13bf3c;
 }
 
 .portfolio-sec .cbp-l-caption-title {
@@ -1299,7 +1299,7 @@ header{
 .testimonial-sec{
     padding-top: 150px;
     padding-bottom: 180px;
-    background-color:#e8d716;
+    background-color:#13bf3c;
 }
 
 #testimonial-header-svg{
@@ -1439,7 +1439,7 @@ header{
 
 .lastest-blog .blog-content h1 span{
     font-size: 60px;
-    color: #e8d716;
+    color: #13bf3c;
 }
 
 .lastest-blog .blog-content p{
@@ -1732,11 +1732,11 @@ header{
     padding-right: 30px;
 }
 .standalone-detail .sub-heading{
-    color: #e8d716;
+    color: #13bf3c;
     margin-bottom: 10px;
 }
 .standalone-area .sub-heading{
-    color: #e8d716;
+    color: #13bf3c;
     margin-bottom: 8px;
 }
 .standalone-detail .heading{
@@ -1947,7 +1947,7 @@ header{
 .container1 > div, .container2 > div, .container3 > div {
     width: 16px;
     height: 16px;
-    border: 5px solid #dbd527;
+    border: 5px solid #13bf3c;
     background-color: #fff;
 
     border-radius: 100%;
