ganti warna dan favicon mainweb

--- a/css/main.css
+++ b/css/main.css
@@ -43,7 +43,7 @@ html {
 }
 
 body {
-  background-color: #fca072;
+  background-color: #00afef;
   margin: 0;
   width: 100%;
   height: 100%;
@@ -150,7 +150,7 @@ input[type="submit"],
   line-height: 1.2;
   border: 0;
   outline: 0;
-  border: 2px solid #fca072;
+  border: 2px solid #00afef;
   color: #f5f5f5;
   text-shadow: none;
   background-color: transparent;
@@ -181,9 +181,9 @@ input[type="button"]:hover,
 input[type="button"]:focus,
 input[type="submit"]:hover,
 input[type="submit"]:focus {
-  background-color: #fca072;
+  background-color: #00afef;
   color: #fff;
-  border: 2px solid #fca072;
+  border: 2px solid #00afef;
 }
 
 .btn-secondary {
@@ -243,7 +243,7 @@ input[type="submit"]:focus {
   width: 52px;
   height: 52px;
   margin: 100px auto;
-  background-color: #fca072;
+  background-color: #00afef;
 
   border-radius: 100%;  
   -webkit-animation: sk-scaleout 1.0s infinite ease-in-out;
@@ -323,7 +323,7 @@ input[type="submit"]:focus {
   ul.main-menu a.active,
   ul.main-menu a:focus,
   ul.main-menu a:hover {
-    color: #fca072;
+    color: #00afef;
   }
 
   ul.main-menu .menu-icon {
@@ -338,7 +338,7 @@ input[type="submit"]:focus {
     opacity: 0;
     color: #fff;
     padding: 2px 10px;
-    background-color: #fca072;
+    background-color: #00afef;
     white-space: nowrap;
     right: 0;
     top: -50%;
@@ -391,7 +391,7 @@ input[type="submit"]:focus {
 }
 
 .lmpixels-arrows-nav div:hover {
-  color: #fca072;
+  color: #00afef;
 }
 /* --- End LMPixels Arrow Nav --- */
 
@@ -488,7 +488,7 @@ input[type="submit"]:focus {
 
 .header-buttons .btn-primary:hover {
   background-color: #fff;
-  color: #fca072;
+  color: #00afef;
   border-color: #fff;
 }
 
@@ -584,7 +584,7 @@ input[type="submit"]:focus {
 }
 
 .ps:hover>.ps__scrollbar-y-rail:hover>.ps__scrollbar-y {
-    background-color: #fca072;
+    background-color: #00afef;
 }
 
 .ps>.ps__scrollbar-y-rail {
@@ -602,7 +602,7 @@ input[type="submit"]:focus {
 }
 
 .ps:hover.ps--in-scrolling.ps--y>.ps__scrollbar-y-rail>.ps__scrollbar-y {
-  background-color: #fca072;
+  background-color: #00afef;
 }
 /* --- End Custom ScrollBar Customization --- */
 
@@ -621,7 +621,7 @@ input[type="submit"]:focus {
 }
 
 .page-title h2 span {
-  color: #fca072;
+  color: #00afef;
 }
 
 .page-title:after {
@@ -632,9 +632,9 @@ input[type="submit"]:focus {
   content: '';
   height: 30px;
   width: 50px;
-  background-image: -webkit-repeating-radial-gradient(center center, #fca072, #fca072 1px, transparent 0px, transparent 100%);
-  background-image: -moz-repeating-radial-gradient(center center, #fca072, #fca072 1px, transparent 0px, transparent 100%);
-  background-image: -ms-repeating-radial-gradient(center center, #fca072, #fca072 1px, transparent 0px, transparent 100%);
+  background-image: -webkit-repeating-radial-gradient(center center, #00afef, #00afef 1px, transparent 0px, transparent 100%);
+  background-image: -moz-repeating-radial-gradient(center center, #00afef, #00afef 1px, transparent 0px, transparent 100%);
+  background-image: -ms-repeating-radial-gradient(center center, #00afef, #00afef 1px, transparent 0px, transparent 100%);
   -webkit-background-size: 6px 6px;
   -moz-background-size: 6px 6px;
   background-size: 6px 6px;
@@ -695,7 +695,7 @@ textarea.form-control, textarea.form-control:focus {
   top: 0;
   opacity: 0;
   background: transparent;
-  border: 2px solid #fca072;
+  border: 2px solid #00afef;
   border-right-width: 0;
   height: 100%;
   -webkit-transition: all 0.3s ease-in-out;
@@ -766,7 +766,7 @@ textarea.form-control, textarea.form-control:focus {
 }
 
 .form-group-with-icon.form-group-focus i {
-  color: #fca072;
+  color: #00afef;
 }
 
 .form-group.form-group-w-checkbox {
@@ -820,7 +820,7 @@ textarea.form-control, textarea.form-control:focus {
 
 .form-group .form-control:focus ~ label,
 .form-group.form-group-focus .form-control ~ label {
-  color: #fca072;
+  color: #00afef;
   top: -20px;
   left: 0;
   z-index: 1;
@@ -855,7 +855,7 @@ textarea.form-control, textarea.form-control:focus {
 }
 
 .block-title h3 span {
-  color: #fca072;
+  color: #00afef;
 }
 
 .block-title:after {
@@ -866,9 +866,9 @@ textarea.form-control, textarea.form-control:focus {
   content: '';
   height: 20px;
   width: 30px;
-  background-image: -webkit-repeating-radial-gradient(center center, #fca072, #fca072 1px, transparent 0px, transparent 100%);
-  background-image: -moz-repeating-radial-gradient(center center, #fca072, #fca072 1px, transparent 0px, transparent 100%);
-  background-image: -ms-repeating-radial-gradient(center center, #fca072, #fca072 1px, transparent 0px, transparent 100%);
+  background-image: -webkit-repeating-radial-gradient(center center, #00afef, #00afef 1px, transparent 0px, transparent 100%);
+  background-image: -moz-repeating-radial-gradient(center center, #00afef, #00afef 1px, transparent 0px, transparent 100%);
+  background-image: -ms-repeating-radial-gradient(center center, #00afef, #00afef 1px, transparent 0px, transparent 100%);
   -webkit-background-size: 6px 6px;
   -moz-background-size: 6px 6px;
   background-size: 6px 6px;
@@ -917,7 +917,7 @@ textarea.form-control, textarea.form-control:focus {
 }
 
 .info-list .title {
-  color: #fca072;
+  color: #00afef;
   margin-right: 5px;
   font-weight: 600;
 }
@@ -945,7 +945,7 @@ textarea.form-control, textarea.form-control:focus {
 .info-block-w-icon i {
   position: relative;
   font-size: 42px;
-  color: #fca072;
+  color: #00afef;
   opacity: .7;
 }
 /* --- End Info block with Icon --- */
@@ -974,7 +974,7 @@ textarea.form-control, textarea.form-control:focus {
 .lm-info-block i {
   position: relative;
   font-size: 33px;
-  color: #fca072;
+  color: #00afef;
   z-index: 1;
 }
 
@@ -989,7 +989,7 @@ textarea.form-control, textarea.form-control:focus {
   font-weight: 400;
   display: block;
   margin: 10px 0;
-  color: #fca072;
+  color: #00afef;
 }
 
 
@@ -1033,7 +1033,7 @@ textarea.form-control, textarea.form-control:focus {
   font-size: 30px;
   right: 0;
   top: 7px;
-  color: #fca072;
+  color: #00afef;
   opacity: .5;
 }
 
@@ -1136,8 +1136,8 @@ textarea.form-control, textarea.form-control:focus {
 .testimonials.owl-carousel .owl-nav .owl-next:hover,
 .clients.owl-carousel .owl-nav .owl-prev:hover,
 .clients.owl-carousel .owl-nav .owl-next:hover {
-    background-color: #fca072;
-    border-color: #fca072;
+    background-color: #00afef;
+    border-color: #00afef;
     color: #fff;
 }
 /* --- End of Sliders Nav --- */
@@ -1198,7 +1198,7 @@ textarea.form-control, textarea.form-control:focus {
   position: absolute;
   margin-left: -8px;
   border-radius: 10px;
-  background-color: #fca072;
+  background-color: #00afef;
   opacity: .25;
   z-index: 0;
 }
@@ -1213,7 +1213,7 @@ textarea.form-control, textarea.form-control:focus {
   margin-left: -4px;
   background-color: #222;
   border-radius: 5px;
-  border: 2px solid #fca072;
+  border: 2px solid #00afef;
   z-index: 1;
 }
 
@@ -1270,7 +1270,7 @@ textarea.form-control, textarea.form-control:focus {
   position: relative;
   display: inline-block;
   background-color: #222;
-  border: 1px solid #fca072;
+  border: 1px solid #00afef;
   -moz-border-radius: 8px;
   -webkit-border-radius: 8px;
   border-radius: 8px;
@@ -1285,7 +1285,7 @@ textarea.form-control, textarea.form-control:focus {
 .skills-second-style .skill-container:before {
   content: '';
   position: absolute;
-  background-color: #fca072;
+  background-color: #00afef;
 }
 
 .skills-second-style .skill-value {
@@ -1298,7 +1298,7 @@ textarea.form-control, textarea.form-control:focus {
 }
 
 .skills-second-style .skill-percentage {
-  background-color: #fca072;
+  background-color: #00afef;
   border: 2px solid #222;
   -moz-border-radius: 9px;
   -webkit-border-radius: 9px;
@@ -1373,7 +1373,7 @@ textarea.form-control, textarea.form-control:focus {
 
 .knowledges li {;
   display: inline-block;
-  background-color: #fca072;
+  background-color: #00afef;
   border-radius: 3px;
   color: #fff;
   padding: 1px 10px;
@@ -1596,7 +1596,7 @@ textarea.form-control, textarea.form-control:focus {
   width: 30px;
   height: 30px;
   background-color: #222;
-  color: #fca072;
+  color: #00afef;
   text-align: center;
   line-height: 30px;
   -webkit-transition: all 0.3s ease-in-out;
@@ -1854,7 +1854,7 @@ textarea.form-control, textarea.form-control:focus {
 }
 
 .ajax-page-nav > div.nav-item a:hover {
-  background-color: #fca072;
+  background-color: #00afef;
   color: #fff;
 }
 
@@ -1913,7 +1913,7 @@ textarea.form-control, textarea.form-control:focus {
 }
 
 .project-general-info .fa {
-  color: #fca072;
+  color: #00afef;
   margin-right: 5px;
 }
 
@@ -1945,8 +1945,8 @@ textarea.form-control, textarea.form-control:focus {
 
 .share-buttons a:hover {
   color: #fff;
-  background-color: #fca072;
-  border-color: #fca072;
+  background-color: #00afef;
+  border-color: #00afef;
 }
 
 .share-buttons a:last-child {
@@ -2371,7 +2371,7 @@ blockquote {
     height: 48px;
     line-height: 46px;
     text-align: center;
-    background-color: #fca072;
+    background-color: #00afef;
     right: 10px;
     font-size: 19px;
     top: 10px;
@@ -2460,7 +2460,7 @@ blockquote {
     right: 10px;
     bottom: 10px;
     padding: 5px 0;
-    border: 2px solid #fca072;
+    border: 2px solid #00afef;
   }
 
   .lmpixels-arrows-nav div {
@@ -2646,7 +2646,7 @@ blockquote {
   content: '';
   height: 2px;
   margin-top: 0;
-  background-color: #fca072;
+  background-color: #00afef;
   position: absolute;
   left: 0;
   bottom: -3px;
@@ -2866,7 +2866,7 @@ blockquote {
 .fun-fact i {
   position: relative;
   font-size: 33px;
-  color: #fca072;
+  color: #00afef;
   margin-bottom: 6px;
   width: 33px;
   height: 33px;
@@ -2877,7 +2877,7 @@ blockquote {
   font-weight: 400;
   display: block;
   margin: 10px 0;
-  color: #fca072;
+  color: #00afef;
 }
 
 .fun-fact-block-value {
